--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WildRank</string>
+    <string name="app_name">Stryke Force Scouting</string>
     <string name="action_settings">Settings</string>
 
     <!-- Mode titles -->
@@ -20,7 +20,7 @@
     <string name="menu_title_users">Users</string>
     <string name="menu_title_sync">Sync</string>
     <string name="select_a_team">Select a team</string>
-    <string name="wildrank_login">WildRank Login</string>
+    <string name="wildrank_login">Stryke Force Login</string>
     <string name="login_prompt">Enter your user ID</string>
     <string name="button_login">Login</string>
     <string name="button_sync">Sync</string>
@@ -30,5 +30,6 @@
     <string name="team_number">Team Number:</string>
     <string name="alliance">Alliance:</string>
     <string name="button_begin_scouting">Begin Scouting</string>
+
 
 </resources>
