--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="mode_scouters">Scouters</string>
     <string name="mode_whiteboard">Whiteboard</string>
     <string name="mode_team_summaries">Team Summaries</string>
+    <string name="mode_teams_comparison">Teams Comparison</string>
     <string name="mode_picklist">Picklist</string>
 
     <string name="being_scouting">Begin scouting</string>
